--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ title: "Welcome to nach-vorne.de"
     <br />
     10247 Berlin</address>
 
-    <p><a href="mailto:spam@schmidtwisser.de">spam@schmidtwisser.de</a></p>
+    <p><a href="mailto:spam@nach-vorne.eu">spam@nach-vorne.eu</a></p>
 
     <p>Feel free to substitute spam with gregor in the above email address.</p>
   </div>
