updating mail address

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="postal-code">10247</span> <span class="locality">Berlin</span>
           </span>
         </address>
-        <a class="email fn" href="mailto:gregor@schmidtwisser.de">gregor@schmidtwisser.de</a>
+        <a class="email fn" href="mailto:schmidt@nach-vorne.eu">schmidt@nach-vorne.eu</a>
       </div>
     </div>
       <script type="text/javascript">
