Adding my shiny new github git.io url

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="tinyurls">
         <ul>
           <li><a rel="me" class="url german" href="https://www.xing.com/profile/Gregor_Schmidt3">xing</a></li>
-          <li><a rel="me" class="url english" href="http://workingwithrails.com/person/8917-gregor-schmidt">workingwithrails</a></li>
+          <li><a rel="me" class="url english" href="http://git.io/sch">github</a></li>
           <li><a rel="me" class="url mixed" href="http://www.slideshare.net/schmidt/slideshows">slideshare</a></li>
           <li><a class="url german" href="http://schmidtwisser.spreadshirt.net/">spreadshirt</a></li>
           <li><a rel="me" class="url mixed" href="http://www.twitter.com/schmidtwisser/">twitter</a></li>
