Updating structure to fit my needs

--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title : Archive
-header : Post Archive
+tagline: List all the posts!
 group: navigation
 ---
 {% include JB/setup %}
