--- a/index.html
+++ b/index.html
@@ -15,22 +15,19 @@
       <img id="me" src="/me.png" class="photo" alt="" />
       <div id="urls">
         <ul>
-          <li><a rel="me" class="url uid german" href="http://www.schmidtwisser.de">schmidtwisser.de</a></li>
+          <li><a rel="me" class="url english" href="http://blog.schm.eu/">blog.schm.eu</a></li>
           <li><a rel="me" class="url english" href="http://www.nach-vorne.de">nach-vorne.de</a></li>
-          <li><a rel="me" class="url mixed" href="http://soup.schmidtwisser.de">soup.schmidtwisser.de</a></li>
-          <li><a rel="me" class="url english" href="http://finn.de/blog">finn.de</a></li>
-          <!--<li><a class="url english" href="http://contextr.rubyforge.org">contextr.rubyforge.org</a></li>-->
         </ul>
       </div>
       <div id="tinyurls">
         <ul>
           <li><a rel="me" class="url german" href="https://www.xing.com/profile/Gregor_Schmidt3">xing</a></li>
+          <li><a rel="me" class="url english" href="https://www.linkedin.com/in/schmidtwisser">linkedin</a></li>
           <li><a rel="me" class="url english" href="http://git.io/sch">github</a></li>
           <li><a rel="me" class="url mixed" href="http://www.slideshare.net/schmidt/slideshows">slideshare</a></li>
           <li><a class="url german" href="http://schmidtwisser.spreadshirt.net/">spreadshirt</a></li>
           <li><a rel="me" class="url mixed" href="http://www.twitter.com/schmidtwisser/">twitter</a></li>
           <li><a rel="me" class="url mixed" href="http://www.last.fm/user/schmidtwisser/">last.fm</a></li>
-          <li><a rel="me" class="url mixed" href="http://del.icio.us/schmidtwisser">del.icio.us</a></li>
         </ul>
       </div>
       <div id="meta">
