Adding app.net and g+
Also adding author link to get my photo next to results for this page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
     <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link href="https://plus.google.com/116567597636359540993" rel="author"/>
     <title>nach-vorne.eu &middot; Gregor Schmidt</title>
   </head>
   <body>
@@ -23,10 +24,10 @@
         <ul>
           <li><a rel="me" class="url german" href="https://www.xing.com/profile/Gregor_Schmidt3">xing</a></li>
           <li><a rel="me" class="url english" href="https://www.linkedin.com/in/schmidtwisser">linkedin</a></li>
-          <li><a rel="me" class="url english" href="http://git.io/sch">github</a></li>
-          <li><a rel="me" class="url mixed" href="http://www.slideshare.net/schmidt/slideshows">slideshare</a></li>
-          <li><a class="url german" href="http://schmidtwisser.spreadshirt.net/">spreadshirt</a></li>
-          <li><a rel="me" class="url mixed" href="http://www.twitter.com/schmidtwisser/">twitter</a></li>
+          <li><a rel="me" class="url english" href="https://git.io/sch">github</a></li>
+          <li><a rel="me" class="url mixed" href="https://alpha.app.net/schm/">app.net</a></li>
+          <li><a rel="me" class="url mixed" href="https://plus.google.com/116567597636359540993/">google+</a></li>
+          <li><a rel="me" class="url mixed" href="https://www.twitter.com/schmidtwisser/">twitter</a></li>
           <li><a rel="me" class="url mixed" href="http://www.last.fm/user/schmidtwisser/">last.fm</a></li>
         </ul>
       </div>
