Styling home page

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 layout: default
 ---
 
-Hallo
+<div class="feature-image"></div>
+<div class="feature-spacer"></div>
+<div class="feature-content">
+  <p>{{ site.description }}</p>
+</div>
