Add cta and legal notice

--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@ layout: default
 <div class="feature-image"></div>
 <div class="feature-spacer"></div>
 <div class="feature-content">
-  <p>{{ site.description }}</p>
+  <div>
+    <p>{{ site.description }}</p>
+    <form action="/portfolio">
+      <button class="cta">See my portfolio</button>
+    </form>
+  </div>
 </div>
