--- a/portfolio.html
+++ b/portfolio.html
@@ -5,16 +5,22 @@ title: Portfolio
 
 <h1>Portfolio</h1>
 
-<p>Below you may find some examples of my freelance work. If you have any
-questions, drop me a line. I would be happy to tell you more.</p>
+<div class="hireme">
+  <p>
+    Below you may find some examples of my freelance work. If you have any
+    questions, drop me a line. I would be happy to tell you more.
+  </p>
 
-<form action="mailto:schmidt@nach-vorne.eu?subject=Let's%20talk!">
-  <button type="submit" class="cta">
-    Just send a mail
-  </button>
-</form>
+  <p>
+    Also, I am available for hire.
+  </p>
 
-<br/><br/>
+  <form action="mailto:schmidt@nach-vorne.eu?subject=Let's%20talk!">
+    <button type="submit" class="cta">
+      Just send a mail
+    </button>
+  </form>
+</div>
 
 
 <div class="home">
