--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,8 @@
 ---
-layout: default
+layout: page
 title: Portfolio
 permalink: "portfolio/overview"
 ---
-
-<h1>Portfolio</h1>
 
 <div class="hireme">
   <p>
