Remove rates from main nav

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,9 @@ permalink: "portfolio/overview"
   </p>
 
   <p>
-    Also, I am available for hire.
+    Also, I am available for hire. I have published
+    <a href="{{ "/rates" | prepend: site.baseurl }}">my rates</a> for everybody
+    to see. I would love to hear, how I may help you.
   </p>
 
   <form action="mailto:schmidt@nach-vorne.eu?subject=Let's%20talk!">
