Update URLs for deployment on 5apps

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Portfolio
-permalink: "portfolio/overview"
+
 ---
 
 <div class="hireme">
@@ -12,7 +12,7 @@ permalink: "portfolio/overview"
 
   <p>
     Also, I am available for hire. I have published
-    <a href="{{ "/rates" | prepend: site.baseurl }}">my rates</a> for everybody
+    <a href="{{ "/rates/" | prepend: site.baseurl }}">my rates</a> for everybody
     to see. I would love to hear, how I may help you.
   </p>
 
